// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transfer.file-operations ls 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "transfer.api.globusonline.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "GET",
  "url": "https://transfer.api.globusonline.org/v0.10/operation/endpoint/c591c905-2674-4227-9d31-1ff9485945a7/ls?path=%2F%7E%2F",
}
`;

exports[`transfer.file-operations mkdir 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "content-length": "47",
    "content-type": "application/json",
    "host": "transfer.api.globusonline.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "json": {
    "DATA_TYPE": "mkdir",
    "path": "/~/new-directory",
  },
  "method": "POST",
  "url": "https://transfer.api.globusonline.org/v0.10/operation/endpoint/c591c905-2674-4227-9d31-1ff9485945a7/mkdir",
}
`;

exports[`transfer.file-operations rename 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "content-length": "75",
    "content-type": "application/json",
    "host": "transfer.api.globusonline.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "POST",
  "url": "https://transfer.api.globusonline.org/v0.10/operation/endpoint/c591c905-2674-4227-9d31-1ff9485945a7/rename",
}
`;

exports[`transfer.file-operations symlink 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "content-length": "96",
    "content-type": "application/json",
    "host": "transfer.api.globusonline.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "POST",
  "url": "https://transfer.api.globusonline.org/v0.10/operation/endpoint/c591c905-2674-4227-9d31-1ff9485945a7/symlink",
}
`;
